--- a/app/views/admin/create_article_step3.html.erb
+++ b/app/views/admin/create_article_step3.html.erb
@@ -25,7 +25,7 @@
               <div class="articleContent">
                 <!-- <p compile lang="ja" ng-bind-html="article.body | create_input_box_with_ng_model"></p> -->
                 
-                  <p lang="ja">{{article.body | create_input_box_with_ng_model }}</p> 
+                  <p compile lang="ja">{{article.body | create_input_box_with_ng_model }}</p> 
                 
               </div>
             </div>
