--- a/app/views/admin/create_article_step3.html.erb
+++ b/app/views/admin/create_article_step3.html.erb
@@ -23,10 +23,10 @@
               <!-- End - Article Title & Meaning §sep§ -->
               <!-- §sep§ as Seperator -->
               <div class="articleContent">
-                <!-- <p compile lang="ja" ng-bind-html="article.body | create_input_box_with_ng_model"></p> -->
+                <p compile lang="ja" ng-bind-html="article.body | create_input_box_with_ng_model"></p>
                 
-      <p compile lang="ja">{{article.body | create_input_box_with_ng_model }}</p> 
-                
+<!--       <p compile lang="ja">{{article.body | create_input_box_with_ng_model }}</p> 
+ -->                
               </div>
             </div>
           <!-- Form End -->
