--- a/app/views/admin/create_article_step2.html.erb
+++ b/app/views/admin/create_article_step2.html.erb
@@ -80,7 +80,11 @@
             <h2 lang="ja" id="articleHeading">{{article.title}}</h2>
             <div class="articleContent editable" >
               <!-- <p compile lang="ja" id="article_content">{{ article.body | highlight:search }}</p> -->
-              <p compile lang="ja" id="article_content" ng-bind-html="article.body | highlight:search"></p>
+              <!-- <p compile lang="ja" id="article_content" ng-bind-html="article.body | highlight:search"></p> -->
+              
+              <!-- <p compile lang="ja" id="article_content">{{ article.body }}</p> -->
+              <p lang="ja" id="article_content" ng-bind-html="article.body" ></p>
+
             </div>
 
             <div class="clearfix">
@@ -117,6 +121,7 @@
             <input type="hidden" class="form-control" id="selected_annotation_category" disabled="" />
             <!-- <input type="hidden" class="form-control" id="source_text" ng-model="annotation.source_text" disabled="" /> -->
             <input type="hidden" class="form-control" id="source_text" disabled="" />
+
             <div class="form-group">
               <label for="conjugation" class="col-sm-3 control-label">Original Conjugation</label>
               <div class="col-sm-9">
@@ -162,7 +167,7 @@
             <div class="form-group">
               <div class="col-sm-offset-3 col-sm-9 clearfix">
                 <div class="row col-md-5">
-                  <button type="submit" class="btn btn-primary btn-block" ng-click="create_annotation(annotation);">Save</button>
+                  <button type="submit" class="btn btn-primary btn-block" ng-click="create_annotation(article, annotation);">Save</button>
                 </div>
                 <div class="col-md-5">
                   <button type="submit" class="btn btn-default btn-block" ng-click="discard_annotation_data();">Discard</button>
@@ -189,21 +194,35 @@ YomuLabAnnotation.Selector = {};
 // getSelected() was borrowed from CodeToad at
 // http://www.codetoad.com/javascript_get_selected_text.asp
 YomuLabAnnotation.Selector.getSelected = function(){
-  var t = '';
+
+  var span = document.createElement("span");
+  span.className = "selected_text_underline";
+
+  var selected_text = '';
   if(window.getSelection){
-    try {
-      if (window.getSelection().anchorNode.parentNode.id == 'article_content' || window.getSelection().anchorNode.parentNode.id ==  'selected_text_underline'){      
-        t = window.getSelection();        
+    //try {
+      // Condition To Check Selected Keyword Belongs To Specific Div
+      if (window.getSelection().anchorNode.parentNode.id == 'article_content' || window.getSelection().anchorNode.parentNode.id == 'selected_text_underline'){      
+        selected_text = window.getSelection();
+        
+        // Script To Add Underline 
+        if (selected_text.rangeCount){
+          var range = selected_text.getRangeAt(0).cloneRange();
+          range.surroundContents(span);
+          selected_text.removeAllRanges();
+          selected_text.addRange(range);
+        }
+        //console.log("article_content = "+$('#article_content').text());
       } 
-    }
-    catch(err) {
-     }
+    // }
+    // catch(err) {
+    //  }
   }else if(document.getSelection){
-    t = document.getSelection();
+    selected_text = document.getSelection();
   }else if(document.selection){
-    t = document.selection.createRange().text;
+    selected_text = document.selection.createRange().text;
   }
-  return t;
+  return selected_text;
 }
 
 YomuLabAnnotation.Selector.mouseup = function(){
@@ -214,7 +233,6 @@ YomuLabAnnotation.Selector.mouseup = function(){
       $("#selectedWord").text(st);
       $("#source_text").val(st);
       var selected_string = $("#source_text").val();
-
       angular.element(document.getElementById('adminAnnotation')).scope().fetch_data_for_existing_annotation(selected_string);
     }
   }
@@ -223,8 +241,4 @@ YomuLabAnnotation.Selector.mouseup = function(){
 $(document).ready(function(){
   $(document).bind("mouseup", YomuLabAnnotation.Selector.mouseup);
 });
-
 </script>
-    <style>
-      .highlighted { background: yellow }
-    </style>
