Step3-Article saved as Unpublished

--- a/app/views/admin/create_article_step3.html.erb
+++ b/app/views/admin/create_article_step3.html.erb
@@ -37,7 +37,7 @@
         <div class="clearfix">
           <div class="form-group clearfix">
             <a href="/admin/create_article_step2/{{article.id}}" class="btn btn-primary stepButton pull-left" type="submit">&lt;&lt; Previous</a>
-             <button ng-click="save_article_translation(article.id);" class="btn btn-primary stepButton pull-right" type="submit">Save<i class="fa fa-refresh fa-spin hidden loader"></i></button>
+             <button ng-click="save_article_translation(article.id, 'Unpublished');" class="btn btn-primary stepButton pull-right" type="submit">Save<i class="fa fa-refresh fa-spin hidden loader"></i></button>
           </div>
         </div>
       </div>
